refactor(govdata): remove more unused utility methods from base classes
Remove additional unused methods discovered during cleanup:
- AbstractCacheManifest.buildParameterKey() - no callers
- AbstractGovDataDownloader.downloadFile() - replaced by metadata-driven downloads

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>